# gene_model_plot

./: .gitignore  LICENSE  README.md  pyproject.toml
gene_model_plot/: gene_model.py
gene_model_plot/tests/: test.ipynb
