[tool.poetry]
name = "gene-model-plot"
version = "0.1.0"
description = "a package to facilitate the ploting of gene models from annotation files"
authors = ["Michael Kaufman <MLKaufman@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.0"
pysam = "^0.22.1"
gffutils = "^0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
